# euroc_stage_3

./: README.md
devel/: .catkin  .rosinstall  setup.sh
src/: .clang_complete
src/state_machine/: CMakeLists.txt  package.xml
src/state_machine/config/: lrmate200id7l_control.yaml  miiwa_control.yaml  omnirob_config.yaml
src/state_machine/include/state_machine/: state_machine_miiwa_helper.h
src/state_machine/launch/: miiwa_spawner.launch  state_machine_miiwa.launch
src/state_machine/msg/: cam_info.msg
src/state_machine/src/: state_machine_miiwa.cpp  state_machine_miiwa_helper.cpp
